# VoxelEngine

./: .gitignore  .ignore  README.md
.cache/clangd/index/: CoreIncludes.h.2ECCD4759F38D95D.idx  CoreIncludes.h.7603BB68BF44400E.idx  CoreIncludes.h.B3C50A8A60575FC9.idx  CoreIncludes.h.BFB6F602C04EC5CF.idx  Shaders.cpp.F8F6E2EB38E1997C.idx  Shaders.h.3B6F94C8191A805A.idx  Shapes.cpp.29C754099265DCC1.idx  Shapes.cpp.317FF9876D526029.idx  Shapes.h.2AF876C2099FB23F.idx  Shapes.h.4E4E1A3E6CD8D97F.idx  Shapes.h.9B4411F7D963ED41.idx  Types.h.005AF403ACC78485.idx  Types.h.BB9FA95F7D7B9B06.idx  Types.h.F19087930CFF10F7.idx  VEngine.cpp.64016C6EB03BB7B9.idx  VEngine.cpp.83C51286CA6A9B80.idx  VEngine.h.8403D9596544FA02.idx  VEngine.h.DADED2CDBA9363A9.idx  VoxelEngine.cpp.2459A477F6E299BC.idx  VoxelEngine.cpp.918058FFA0DEF1B7.idx  VoxelEngine.h.6E820452C96864E5.idx  VoxelEngine.h.B274F87380A264D7.idx  VoxelEngine.h.D0E266A902121FC0.idx  Window.cpp.13990DD3B07C0763.idx  Window.cpp.976801F3F34EE91F.idx  Window.h.5C6141DB10087224.idx  Window.h.65483AF5B52CEE39.idx  WindowConfig.h.03695C60FD6BB580.idx  WindowConfig.h.33D5B51CF521674F.idx  WindowSettings.h.476165BA514990D9.idx  glad.c.4785684446AF83F0.idx  glad.c.9B99BF2C259D6DE8.idx  glad.c.FF3D41F4BA55D480.idx  glad.h.0EE93C6A36B18EC2.idx  glad.h.50186B3FEC85503D.idx  glad.h.A4A30CAE252B63C4.idx  khrplatform.h.297494DA423F8D38.idx  khrplatform.h.EC317CEA049C6E06.idx  test.cpp.62CADDE671BDF03B.idx  test.cpp.CF0ECF70D131DB16.idx
VETest/: CMakeLists.txt
VETest/.cache/clangd/index/: CoreDefines.h.43ADA1BFFC9458F0.idx  CoreIncludes.h.CAC7F256FA4E0FDB.idx  Logger.h.26617861AEE746FE.idx  Types.h.95CEBD053DC3B091.idx  VEngine.h.6B3CF009EA21D5E8.idx  VEngine.h.9770700A7B86E247.idx  Window.h.76FE0B0A7C7BC5C2.idx  glad.h.FDBEF71A69320179.idx  khrplatform.h.483552443A0F7EE4.idx  main.cpp.C6231BA8CE4C441C.idx  test.cpp.FD0A32733E3D217E.idx
VETest/include/API/: VEngine.h
VETest/include/VEngine/: Shaders.h  VEngine.h  Window.h
VETest/include/VEngine/Core/: CoreDefines.h  CoreIncludes.h  Logger.h  Logger.inl
VETest/include/include/VEngine/: Shaders.h  Shapes.h  Types.h  VEngine.h  Window.h
VETest/include/include/VEngine/Core/: CoreDefines.h  CoreIncludes.h  Logger.h  Logger.inl
VETest/src/: main.cpp  test.cpp
VoxelEngine/: CMakeLists.txt  run.sh
VoxelEngine/.cache/clangd/index/: CoreDefines.h.8F0362E7E1203E37.idx  CoreIncludes.h.A53B9DA9CDFFC056.idx  Logger.cpp.69D9E0B4EF681469.idx  Logger.h.B4988C40F6C3F7BE.idx  Logger.inl.84978207BF169B1C.idx  Shaders.cpp.B790D8EF1D2264AA.idx  Shaders.h.F10B14D5C42496E3.idx  Shapes.cpp.F8B1B4E17BC2470D.idx  Shapes.h.B73A2723A46C00A7.idx  Types.h.4CFB441F11A622CB.idx  VEngine.cpp.B4B9E78E725E6EB8.idx  VEngine.h.02CC0399AAE31305.idx  VEngine.h.7C0053CD251F3694.idx  Window.cpp.82499488BEC88015.idx  Window.h.B6ADF2933EB9CE5F.idx  glad.c.4A4967DA8D310F14.idx  glad.c.EB9132CD5F577D33.idx  glad.h.DD475F02AEAD5CDB.idx  khrplatform.h.D7816191D82B0F00.idx  test.cpp.AC43EA214A5C8843.idx
VoxelEngine/include/VEngine/: Shapes.h  VEngine.h  Window.h
VoxelEngine/include/VEngine/Core/: Asserts.h  CoreDefines.h  File_IO.h  Logger.h  Logger.inl  Window.h
VoxelEngine/lib/glad/: CMakeLists.txt
VoxelEngine/lib/glad/include/glad/: glad.h
VoxelEngine/shaders/: vShader.vertex
VoxelEngine/src/: Logger.cpp  Shaders.cpp  Window.cpp
VoxelEngine/src/VEngine/: VEngine.cpp
include/VEngine/: Shapes.h
lib/glad/src/: glad.c
samples/VoxelExampleApp/: run.sh
samples/VoxelExampleApp/.cache/clangd/index/: VEngine.h.101489DBA38DA127.idx  VEngine.h.2FB5974C4AB62745.idx  main.cpp.00B69C2EC08A6346.idx
samples/VoxelExampleApp/include/VEngine/: Types.h
samples/VoxelExampleApp/src/: main.cpp
shaders/: fShader.fragment
src/: Shaders.cpp  Shapes.cpp  Window.cpp
src/VEngine/: VEngine.cpp
